reloading the menubar dynamically

--- a/etchosts/etchosts.entitlements
+++ b/etchosts/etchosts.entitlements
@@ -11,5 +11,7 @@
         <string>/etc/hosts</string>
         <string>/private/etc/hosts</string>
     </array>
+    <key>com.apple.security.automation.apple-events</key>
+    <true/>
 </dict>
 </plist>
